fix alignment

--- a/popup.css
+++ b/popup.css
@@ -36,6 +36,7 @@ body {
     overflow-y: auto;
     /* padding: 4rem 2rem 2rem; */
     padding: 3.75rem 2rem 0rem 1rem;
+    min-height: 12rem;
 }
 
 .display_notes {
